--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -211,6 +211,7 @@
 			height: 3em;
 			line-height: 2.95em;
 			overflow: hidden;
+			margin-top: .5em;
 			padding: 0 1em 0 1em;
 			text-align: center;
 			text-decoration: none;
