--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -596,8 +596,9 @@
 			}
 
 			.image.right {
+				margin-top: 1em;
 				margin-bottom: 20px; /* Adjust space below the image */
-				max-width: 20%;
+				max-width: 10%;
 			}
 
 		}			
