--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,19 +2,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;600;700&subset=latin,cyrillic");
 
 /* Basic */
-/* old
-	body {
-		line-height: 1;
-		-ms-overflow-style: scrollbar;
-		background: #E7EFF6;
-	}
-	
-    html {
-        box-sizing: border-box;
-    }
-
-*/
-
 	body, html {
 	    padding: 0;
 	    margin: 0;
@@ -22,7 +9,6 @@
 		background: #E7EFF6;
 	    overflow-x: hidden;
 	}
-
 
 	@-ms-viewport {
 		width: device-width;
@@ -82,13 +68,13 @@
             color: #4B86B4 !important;
         }
 
-		.link {
-			border-bottom: 2px solid #2E2F31;
-		}
+	.link {
+		border-bottom: 2px solid #2E2F31;
+	}
 
-		.link:hover {
-			border-color: #4B86B4;
-		}
+	.link:hover {
+		border-color: #4B86B4;
+	}
 
 	p {
 		margin: 0 40em 1.5em 0;
@@ -130,7 +116,7 @@
 
 	}
 
-	h2 {
+	h2, h5 {
 		font-weight: 400;
 		font-size: 1.2em;
 		line-height: 1.5;
@@ -150,17 +136,23 @@
 		line-height: 1.5;
 		margin: 0em 0em -.5em 0em;
 	}
+	
 
 	@media screen and (max-width: 736px) {
 
 		h1 {
 			font-size: 1.5em;
-			margin: 0.5em 1em;
+			margin: 2em 0 1em 0;
 		}
 
 		h2, h3, h4 {
 			font-size: 1em;
 			margin: 0.5em 1em;
+		}
+
+		h5 {
+			font-size: 1em;
+			margin-bottom: 2em;
 		}
 
 		p {
@@ -464,12 +456,13 @@
 	background-color: #E7EFF6;
   	}
 
-  	@media screen and (max-width: 480px) {
+	  @media screen and (max-width: 480px) {
 		.accordion-container {
-			padding-top: 5em;
+			padding-top: 20em;
+			width: 100%;
 		}
 	}
-
+  
   	/* Style the accordion panel. Note: hidden by default */
   	.panel {
 		background-color: #E7EFF6;
@@ -602,9 +595,9 @@
 			}
 
 			.image.right {
-				margin-top: 1em;
+				max-width: 20%;
+				margin-top: 4em;
 				margin-bottom: 20px; /* Adjust space below the image */
-				max-width: 10%;
 			}
 
 		}			
@@ -725,22 +718,7 @@
 				flex-direction: column;
 				align-items: center;
 			}
-			/*
-				#footer > .inner section:nth-child(1) {
-					width: 100%;
-					margin-right: 0;
-					margin: 3em 0 0 0;
-				}
 
-				#footer > .inner section:nth-child(2) {
-					-moz-order: -1;
-					-webkit-order: -1;
-					-ms-order: -1;
-					order: -1;
-					width: 100%;
-					margin-left: 0;
-				}
-			*/
 				#footer > .inner section:nth-child(1),
 				#footer > .inner section:nth-child(2) {
 					width: 100%;
@@ -755,20 +733,7 @@
 	}
 
 	@media screen and (max-width: 480px) {
-		/* OLD
-		#footer > .inner .copyright {
-			margin-top: 3em;
-			text-align: center;
-		}
 
-			#footer > .inner .copyright li {
-				border-left: 0;
-				padding-left: 0;
-				margin: 0.75em 0 0 0;
-				display: block;
-				line-height: inherit;
-			}
-		*/
 		#footer > .inner .copyright {
 			text-align: center;
 		}
