--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -142,7 +142,7 @@
 
 		h1 {
 			font-size: 1.5em;
-			margin: 2em 0 1em 0;
+			margin: 2em 0 1em 1em;
 		}
 
 		h2, h3, h4 {
@@ -152,7 +152,7 @@
 
 		h5 {
 			font-size: 1em;
-			margin-bottom: 2em;
+			margin-bottom: 4em;
 		}
 
 		p {
