--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -147,13 +147,14 @@
 
 		h2, h3, h4 {
 			font-size: 1em;
-			margin: 0.5em 1em;
+			margin: 0.5em 1em 0 0;
 		}
 
 		h5 {
 			font-size: 1em;
 			margin-bottom: 4em;
 		}
+
 
 		p {
 			margin: 0 1em 1.5em 1em;
