--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -368,7 +368,7 @@
 		}
 
 		.projects:hover {
-			position: relative;
+			position: static;
 		}
 		
 		.project1:hover::after,
@@ -378,11 +378,12 @@
 			content: '';
 			display: block;
 			position: absolute;
-			top: em;
+			filter: grayscale(100%);
+			top: 15em;
 			width: 400px; /* Adjust size as needed */
 			height: 500px; /* Adjust size as needed */
-			right: -100px; /* Adjust position as needed */
-			transform: translate(-30%, -20%);
+			right: 30em; /* Adjust position as needed */
+			/* transform: translate(-30%, -20%); */
 			opacity: 0.5;
 			background-size: contain;
 			background-repeat: no-repeat;
