--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -142,17 +142,24 @@
 
 		h1 {
 			font-size: 1.5em;
-			margin: 2em 0 1em 1em;
+			margin-bottom: .5em;
+			margin-left: .5em;
 		}
 
-		h2, h3, h4 {
+		h2 {
+			font-size: 1em;
+			margin: .5em 0em 1em .7em;
+		}
+		h3, h4 {
 			font-size: 1em;
 			margin: 0.5em 1em 0;
 		}
 
 		h5 {
 			font-size: 1em;
-			margin-bottom: 4em;
+			text-align: center;
+			margin-bottom: 2em;
+			white-space: nowrap; /* Prevent text from wrapping */
 		}
 
 		p {
@@ -188,23 +195,6 @@
 			padding: 0;
 			text-align: center;
 		}
-
-		/* Old
-        #header .inner {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 15px;
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			position:relative
-        }
-
-        #header .title {
-			margin-right: 50em;
-			font-size: 16px;
-            font-weight: 400;
-		} */
 
 		#header .title {
 			margin-right: 50em;
@@ -255,21 +245,37 @@
 				#header nav {
 					right: 0.5em;
 					top: 0.5em;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					flex-wrap: wrap;
 				}
 
 				#header title {
 					margin: 0;
-					right: 0.5em;
-					top: 0.5em;
+        			right: 0.5em;
+        			top: 0.5em;
+        			white-space: nowrap;
+        			overflow: hidden;
+        			text-overflow: ellipsis;
+        			max-width: 100%;
+        			font-size: 18px; /* Adjust as needed for better fit */
 				}
 
 				#header nav ul {
-					flex-direction: column;
+					flex-direction: row;
+					flex-wrap: nowrap;
+					justify-content: center;
 					align-items: center;
+					list-style-type: none;
+					gap: 0px;
+					padding: 0;
+					margin: 0;
+					display: flex;
 				}
 
 				#header nav ul li {
-					margin: 10px 0;
+					margin: 0 5px;
 				}
 		}
 
@@ -277,6 +283,16 @@
 			#header .title {
 				font-size: 16px; /* Adjust as needed for better fit */
 				white-space: normal; /* Allow wrapping */
+			}
+		
+			/* Ensure navigation items stay side by side */
+			#header nav ul {
+				flex-direction: row;
+			}
+		
+			/* Adjust padding for better spacing */
+			#header nav ul li {
+				margin: 0 5px; /* Adjust the margin for better spacing */
 			}
 		}
 		
@@ -688,7 +704,7 @@
 	@media screen and (max-width: 1280px) {
 
 		#footer {
-			padding: 5em 0 3em 0 ;
+			padding: 5em 0 0em 0 ;
 		}
 
 			#footer > .inner section:nth-child(1) {
@@ -720,7 +736,7 @@
 	@media screen and (max-width: 736px) {
 
 		#footer {
-			padding: 3em 0 1em 0 ;
+			padding: 0em 0 1em 0 ;
 		}
 
 			#footer > .inner {
@@ -728,7 +744,7 @@
 				-webkit-flex-direction: column;
 				-ms-flex-direction: column;
 				flex-direction: column;
-				align-items: center;
+				align-items: left;
 			}
 
 				#footer > .inner section:nth-child(1),
@@ -739,7 +755,7 @@
 				}
 
 				#footer > .inner .copyright {
-					text-align: center;
+					text-align: left;
 				}
 
 	}
