--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -98,6 +98,14 @@
 			margin: 0 0 1em 0;
 		}
 
+		a {
+			text-decoration: none;
+			color: #4B86B4;
+		}
+
+		.link {
+			border-bottom: none;
+		}
 	}
 
 	@media screen and (max-width: 360px) {
@@ -150,14 +158,17 @@
 			font-size: 1em;
 			margin: .5em 0em 1em .7em;
 		}
+
 		h3, h4 {
-			font-size: 1em;
-			margin: 0.5em 1em 0;
-		}
+        font-size: 1em;
+        margin: 0.5em 1em 0;
+        padding: 0 1em; /* Add padding to ensure space around the text */
+    	}
 
 		h5 {
 			font-size: 1em;
 			text-align: center;
+			margin-top: 10em;
 			margin-bottom: 2em;
 			white-space: nowrap; /* Prevent text from wrapping */
 		}
@@ -243,23 +254,16 @@
 			}
 
 				#header nav {
-					right: 0.5em;
-					top: 0.5em;
-					display: flex;
-					justify-content: center;
-					align-items: center;
-					flex-wrap: wrap;
+						display: none;
 				}
 
 				#header title {
-					margin: 0;
-        			right: 0.5em;
-        			top: 0.5em;
-        			white-space: nowrap;
-        			overflow: hidden;
-        			text-overflow: ellipsis;
-        			max-width: 100%;
-        			font-size: 18px; /* Adjust as needed for better fit */
+					font-size: 16px; /* Adjust font size as needed */
+					white-space: normal; /* Allow text to wrap */
+					overflow: visible; /* Ensure no clipping */
+					text-align: center; /* Center the title */
+					padding: 0 1em; /* Add padding to ensure space around the text */
+					max-width: 100%; /* Ensure it doesn't exceed the screen width */ /* Adjust as needed for better fit */
 				}
 
 				#header nav ul {
@@ -271,10 +275,11 @@
 					gap: 0px;
 					padding: 0;
 					margin: 0;
-					display: flex;
+					display: none;
 				}
 
 				#header nav ul li {
+					display: none;
 					margin: 0 5px;
 				}
 		}
