--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -423,8 +423,8 @@
 			display: block;
 			position: fixed;
 			filter: grayscale(100%);
-			top: 18em;
-			right: 30em; /* Adjust position as needed */
+			top: 45%;
+			right: 20%; /* Adjust position as needed */
 			width: 400px; /* Adjust size as needed */
 			height: 500px; /* Adjust size as needed */
 			transform: translate(-30%, -20%);
@@ -432,7 +432,7 @@
 			background-size: contain;
 			background-repeat: no-repeat;
 			transition: opacity .7s ease-in-out;
-			z-index: 0; /* Ensure it appears above other content */
+			z-index: 0;
 		}
 
 		.projects:hover .project1::after,
@@ -442,20 +442,21 @@
 			opacity: .5;
 		}
 		
+		
 		.project1:hover::after {
-			background-image: url('https://influencermarketinghub.com/wp-content/uploads/2020/04/The-Ultimate-Guide-to-Advertising-on-Spotify.png');
+			background-image: url('https://raw.githubusercontent.com/brennannguyen/brennannguyen.github.io/main/images/music.png');
 		}
 		
 		.project2:hover::after {
-			background-image: url('https://static.vecteezy.com/system/resources/previews/026/721/112/non_2x/coffee-beans-hand-drawing-sketch-engraving-illustration-style-png.png');
+			background-image: url('https://raw.githubusercontent.com/brennannguyen/brennannguyen.github.io/main/images/coffee.png');
 		}
 		
 		.project3:hover::after {
-			background-image: url('https://img.freepik.com/premium-vector/classic-car-line-art-illustration_53734-30.jpg');
+			background-image: url('https://raw.githubusercontent.com/brennannguyen/brennannguyen.github.io/main/images/car.png');
 		}
 		
 		.project4:hover::after {
-			background-image: url('https://assets.aboutamazon.com/dims4/default/8cfb298/2147483647/strip/true/crop/1600x900+0+0/resize/767x431!/quality/90/?url=https%3A%2F%2Famazon-blogs-brightspot.s3.amazonaws.com%2Fa2%2F9a%2Fad83d2e84459ab962f50fc8d2317%2Fgivebackbox-inline1.jpg');
+			background-image: url('https://raw.githubusercontent.com/brennannguyen/brennannguyen.github.io/main/images/box.png');
 		}
 
 		@media screen and (max-width: 736px) {
@@ -764,7 +765,7 @@
 	@media screen and (max-width: 1280px) {
 
 		#footer {
-			padding: 0em 0 0em 0 ;
+			padding: 5em 0 0em 0 ;
 		}
 
 			#footer > .inner section:nth-child(1) {
@@ -796,7 +797,7 @@
 	@media screen and (max-width: 736px) {
 
 		#footer {
-			padding: 0em 0 1em 0 ;
+			padding: 0em 0 0em 0 ;
 		}
 
 			#footer > .inner {
